# bullet

./: CMakeLists.txt  CMakeLists.txt.user.9ca5a29  acquirestock.cpp  acquirestock.h  acquirestock.ui  addcash.cpp  addcash.h  addcash.ui  addcustomer.cpp  addcustomer.h  addcustomer.ui  addnewproduct.cpp  addnewproduct.h  addnewproduct.ui  addnewuser.cpp  addnewuser.h  addnewuser.ui  addproduct.cpp  addproduct.h  addproduct.ui  addproductcategory.cpp  addproductcategory.h  addproductcategory.ui  addproductzone.cpp  addproductzone.h  addproductzone.ui  addsupplier.cpp  addsupplier.h  addsupplier.ui  addtransactiontype.cpp  addtransactiontype.h  addtransactiontype.ui  adminauthentication.cpp  adminauthentication.h  adminauthentication.ui  adminwindow.cpp  adminwindow.h  adminwindow.ui  businesslimits.cpp  businesslimits.h  (+125 more)
backUp/: salesclient.cpp  salesclient.h  salesclient.ui
backUp/b2/: salescenter.cpp  salescenter.h  salesclient.cpp  salesclient.h  salesclient.ui
resources/background/: .~lock.Gannt chart (1) (2).xlsx#
